[gd_scene load_steps=17 format=3 uid="uid://dsxrf7s0exvt7"]

[ext_resource type="Script" uid="uid://pf3j3f0ukca0" path="res://Scripts/Enemies/enemie_1.gd" id="1_k5ikt"]
[ext_resource type="Texture2D" uid="uid://dpxk7t6e1n6pg" path="res://Assets/art/sprites/Enemigos/ALien_Ovni.png" id="2_nfho0"]
[ext_resource type="Texture2D" uid="uid://bkwhr777vossm" path="res://Assets/art/sprites/Particulas/explosion_1.png" id="3_bfh5f"]
[ext_resource type="Texture2D" uid="uid://duyl7dquawm65" path="res://Assets/art/sprites/Particulas/explosion_2.png" id="4_uax2x"]
[ext_resource type="Texture2D" uid="uid://cxclutw0k851d" path="res://Assets/art/sprites/Particulas/explosion_3.png" id="5_6ttx6"]
[ext_resource type="Texture2D" uid="uid://cn7o86lwnw2ru" path="res://Assets/art/sprites/Particulas/explosion_4.png" id="6_7yqfu"]
[ext_resource type="Texture2D" uid="uid://bresepnf51cdy" path="res://Assets/art/sprites/Particulas/explosion_5.png" id="7_h4hlk"]
[ext_resource type="Texture2D" uid="uid://cwnl465sbrvj3" path="res://Assets/art/sprites/Particulas/explosion_6.png" id="8_pv470"]
[ext_resource type="AudioStream" uid="uid://cmp0uxkr0orbl" path="res://Assets/sfx/506326__thevoicesgames__retro-explosion-1.wav" id="9_8tpct"]
[ext_resource type="AudioStream" uid="uid://dcxkqibgq5hn5" path="res://Assets/music/retro-laser-2-236680.ogg" id="10_7esva"]

[sub_resource type="SpriteFrames" id="SpriteFrames_hrlvl"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_nfho0")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_bfh5f")
}, {
"duration": 1.0,
"texture": ExtResource("4_uax2x")
}, {
"duration": 1.0,
"texture": ExtResource("5_6ttx6")
}, {
"duration": 1.0,
"texture": ExtResource("6_7yqfu")
}, {
"duration": 1.0,
"texture": ExtResource("7_h4hlk")
}, {
"duration": 1.0,
"texture": ExtResource("8_pv470")
}],
"loop": true,
"name": &"explosion",
"speed": 8.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_08ug1"]
radius = 16.0312

[sub_resource type="CircleShape2D" id="CircleShape2D_jto8a"]
radius = 25.7099

[sub_resource type="Animation" id="Animation_bfh5f"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_8tpct"]
resource_name = "hit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.201486, 0.404547),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uax2x"]
_data = {
&"RESET": SubResource("Animation_bfh5f"),
&"hit": SubResource("Animation_8tpct")
}

[node name="Enemie_1" type="CharacterBody2D" groups=["enemy_1"]]
z_index = 2
rotation = 0.736588
script = ExtResource("1_k5ikt")

[node name="Sprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
rotation = -0.785398
scale = Vector2(0.3, 0.3)
sprite_frames = SubResource("SpriteFrames_hrlvl")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 4
shape = SubResource("CircleShape2D_08ug1")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_jto8a")

[node name="gun_timer" type="Timer" parent="."]
wait_time = 5.0

[node name="Label" type="Label" parent="."]
visible = false
texture_filter = 1
offset_left = -21.0
offset_top = -52.0
offset_right = 19.0
offset_bottom = -29.0
text = "0"
horizontal_alignment = 1

[node name="ProgressBar_enemy" type="ProgressBar" parent="."]
visible = false
modulate = Color(1, 0, 0, 1)
offset_left = -42.0
offset_top = -46.0
offset_right = 51.0
offset_bottom = -31.0
value = 100.0
show_percentage = false

[node name="explosion_timer" type="Timer" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uax2x")
}

[node name="hit" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("9_8tpct")
volume_db = 10.0

[node name="laser" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("10_7esva")
volume_db = 7.376

[connection signal="animation_finished" from="Sprite2D" to="." method="_on_sprite_2d_animation_finished"]
[connection signal="timeout" from="gun_timer" to="." method="_on_gun_timer_timeout"]
[connection signal="timeout" from="explosion_timer" to="." method="_on_explosion_timer_timeout"]
